REGRESSION(r268249): image-orientation:none is broken for local (file://) urls https://bugs.webkit.org/show_bug.cgi?id=217808 <rdar://problem/70603407>

Reviewed by Myles C. Maxfield.

Source/WebCore:

Use isCORSSameOrigin() instead of isOriginClean(), it's a more accureate method
for this purpose.
Allow image-orientation: none overriding when the image is local or a data-url.

Test: fast/images/image-orientation-none-local.html

* html/HTMLImageElement.cpp:
(WebCore::HTMLImageElement::allowsOrientationOverride const):

LayoutTests:

Added a tests that ensure image-orientation: none is supported in file and data URLs.

* fast/images/image-orientation-none-local-expected.txt: Added.
* fast/images/image-orientation-none-local.html: Added.
* fast/images/image-orientation-none-data-url-expected.txt: Added.
* fast/images/image-orientation-none-data-url.html: Added.


Canonical link: https://commits.webkit.org/231028@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269155 268f45cc-cd09-0410-ab3c-d52691b4dbfc